Main overhaul of website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,44 @@
 ---
 ---
+@article{chang2024comparative,
+  abbr={BJA},
+  title={Comparative efficacy of balanced crystalloids versus 0.9\% saline on delayed graft function and perioperative outcomes in kidney transplantation: a meta-analysis of randomised controlled trials},
+  author={Chang, Tzu and Shih, Ming-Chieh and Wu, Yi-Luen and Wu, Tsung-Ta and Yang, Jen-Ting and Wu, Chun-Yu},
+  journal={British Journal of Anaesthesia},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{liu2024effect,
+  abbr={JMII},
+  title={Effect of early dexamethasone on outcomes of COVID-19: A quasi-experimental study using propensity score matching},
+  author={Liu, Wang-Da and Wang, Jann-Tay and Shih, Ming-Chieh and Chen, Kai-Hsiang and Huang, Szu-Ting and Huang, Chun-Fu and Chang, Tien-Hao and Tsai, Ming-Jui and Kuo, Po-Hsien and Yeh, Yi-Chen and others},
+  journal={Journal of Microbiology, Immunology and Infection},
+  volume={57},
+  number={3},
+  pages={414--425},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{liu2024effectiveness,
+  abbr={JMII},
+  title={Effectiveness and evolution of anti-SARS-CoV-2 spike protein titers after three doses of COVID-19 vaccination in people with HIV},
+  author={Liu, Wang-Da and Lin, Meng-Shuan and Sun, Hsin-Yun and Shih, Ming-Chieh and Chuang, Yu-Chung and Huang, Yu-Shan and Lin, Kuan-Yin and Li, Guei-Chi and Wu, Pei-Ying and Chen, Ling-Ya and others},
+  journal={Journal of Microbiology, Immunology and Infection},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{jones2024reassessing,
+  abbr={medRxiv},
+  title={Reassessing the management of uncomplicated urinary tract infection: A retrospective analysis using machine learning causal inference},
+  author={Jones, Noah C and Shih, Ming-Chieh and Healey, Elizabeth and Zhai, Chen Wen and Advani, Sonali D and Smith-McLallen, Aaron and Sontag, David and Kanjilal, Sanjat},
+  journal={medRxiv},
+  pages={2024--08},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
 
 @article{chinnappa2023interpretation,
   abbr={JCM},
