--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@ARTICLE{Ji2024-ei,
+  abbr     = {medRxiv},
+  title    = {Assessing variation in first-line type 2 diabetes treatment across
+              {eGFR} levels and providers},
+  author   = {Ji, Christina X and Blecker, Saul and Oberst, Michael and Shih,
+              Ming-Chieh and Horwitz, Leora I and Sontag, David},
+  journal  = {medRxiv},
+  pages    = {2024.09.19.24313155},
+  month    = {sep},
+  year     = {2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+
 @article{chang2024comparative,
   abbr={BJA},
   title={Comparative efficacy of balanced crystalloids versus 0.9\% saline on delayed graft function and perioperative outcomes in kidney transplantation: a meta-analysis of randomised controlled trials},
