Update yclin info, teaching, bibiography and docker-compose for archived image

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
-@ARTICLE{Ji2024-ei,
+@article{jones2025use,
+  abbr      = {JAMA Network Open},
+  title     = {Use of Machine Learning to Assess the Management of Uncomplicated Urinary Tract Infection},
+  author    = {Jones, Noah and Shih, Ming-Chieh and Healey, Elizabeth and Zhai, Chen Wen and Advani, Sonali and Smith-McLallen, Aaron and Sontag, David and Kanjilal, Sanjat},
+  journal   = {JAMA Network Open},
+  volume    = {8},
+  number    = {1},
+  pages     = {e2456950--e2456950},
+  year      = {2025},
+  publisher = {American Medical Association}
+}
+
+@article{Ji2024-ei,
   abbr     = {medRxiv},
   title    = {Assessing variation in first-line type 2 diabetes treatment across
               {eGFR} levels and providers},
@@ -42,16 +54,6 @@
   journal={Journal of Microbiology, Immunology and Infection},
   year={2024},
   publisher={Elsevier}
-}
-
-@article{jones2024reassessing,
-  abbr={medRxiv},
-  title={Reassessing the management of uncomplicated urinary tract infection: A retrospective analysis using machine learning causal inference},
-  author={Jones, Noah C and Shih, Ming-Chieh and Healey, Elizabeth and Zhai, Chen Wen and Advani, Sonali D and Smith-McLallen, Aaron and Sontag, David and Kanjilal, Sanjat},
-  journal={medRxiv},
-  pages={2024--08},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory Press}
 }
 
 @article{chinnappa2023interpretation,
