Change selected publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   number    = {1},
   pages     = {e2456950--e2456950},
   year      = {2025},
-  publisher = {American Medical Association}
+  publisher = {American Medical Association},
+  selected  = {true}
 }
 
 @article{Ji2024-ei,
@@ -32,7 +33,8 @@
   author={Chang#, Tzu and Shih#, Ming-Chieh and Wu, Yi-Luen and Wu, Tsung-Ta and Yang, Jen-Ting and Wu, Chun-Yu},
   journal={British Journal of Anaesthesia},
   year={2024},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  selected={true}
 }
 
 @article{liu2024effect,
@@ -97,8 +99,7 @@
   volume={14},
   number={2},
   pages={247--265},
-  year={2023},
-  selected={true}
+  year={2023}
 }
 
 @article{li2023graphical,
@@ -107,8 +108,7 @@
   author={Li, Hua and Shih, Ming-Chieh and Tu, Yu-Kang},
   journal={Research Synthesis Methods},
   year={2023},
-  publisher={Wiley Online Library},
-  selected={true}
+  publisher={Wiley Online Library}
 }
 
 
