--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+
+@article{li2025subcortical,
+  abbr      = {JPD}
+  title     = {Subcortical tau burden correlates with regional brain atrophy and plasma markers in four-repeat tauopathy parkinsonism},
+  author    = {Li, Cheng-Hsuan and Fan, Sung-Pin and Shih, Ming-Chieh and Weng, Yi-Hsin and Chen, Ta-Fu and Li, Hsun and Cheng, Mei-Fang and Kuo, Ming-Che and Peng, Pei-Ling and Higuchi, Makoto and others},
+  journal   = {Journal of Parkinson’s Disease},
+  volume    = {15},
+  number    = {1},
+  pages     = {214--226},
+  year      = {2025},
+  publisher = {SAGE Publications Sage UK: London, England},
+  selected  = {false}
+}
+
 @article{jones2025use,
   abbr      = {JAMA Network Open},
   title     = {Use of Machine Learning to Assess the Management of Uncomplicated Urinary Tract Infection},
