--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{li2025subcortical,
-  abbr      = {JPD}
+  abbr      = {JPD},
   title     = {Subcortical tau burden correlates with regional brain atrophy and plasma markers in four-repeat tauopathy parkinsonism},
   author    = {Li, Cheng-Hsuan and Fan, Sung-Pin and Shih, Ming-Chieh and Weng, Yi-Hsin and Chen, Ta-Fu and Li, Hsun and Cheng, Mei-Fang and Kuo, Ming-Che and Peng, Pei-Ling and Higuchi, Makoto and others},
   journal   = {Journal of Parkinson’s Disease},
