--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{lin2025comparison,
+  abbr      = {DOM},
+  title     = {Comparison of the renal outcomes of novel antidiabetic agents in patients with type 2 diabetes with chronic kidney disease: A systematic review and network meta-analysis of randomized controlled trials},
+  author    = {Lin, Rong and Hsu, Chia-Li and Shih, Ming-Chieh and Chien, Kuo-Liong and Wu, Hon-Yen},
+  journal   = {Diabetes, Obesity and Metabolism},
+  year      = {2025},
+  publisher = {Wiley Online Library},
+  selected  = {false}
+}
+
 @article{li2025subcortical,
   abbr      = {JPD},
   title     = {Subcortical tau burden correlates with regional brain atrophy and plasma markers in four-repeat tauopathy parkinsonism},
